# deterrence-game

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
crates/deterrence-app/: Cargo.toml  tauri.conf.json
crates/deterrence-app/icons/: icon.icns
crates/deterrence-app/src/: game_loop.rs  ipc.rs  lib.rs  main.rs  state.rs
crates/deterrence-campaign/: Cargo.toml
crates/deterrence-core/: Cargo.toml
crates/deterrence-procgen/: Cargo.toml
crates/deterrence-sim/: Cargo.toml
crates/deterrence-sim/src/: engagement.rs  engine.rs  guidance.rs  lib.rs  scenario.rs  tests.rs  world_setup.rs
crates/deterrence-sim/src/systems/: cleanup.rs  fire_control.rs  illuminator.rs  intercept.rs  missile_kinematics.rs  mod.rs  movement.rs  snapshot.rs  threat_ai.rs  wave_spawner.rs
crates/deterrence-sim/src/systems/radar/: detection.rs  energy.rs  mod.rs  tracking.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
project_docs/: implementation_plan.md  product_context.md  progress.md  project_brief.md  project_status.md  sfx_requirements.md  system_patterns.md  tech_context.md  terrain_data_guide.md
scripts/: build.cmd  build.ps1  build.sh  dev.cmd  dev.ps1  dev.sh
src/: main.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/campaign/: economy.rs  mod.rs  territory.rs  upgrades.rs  wave_composer.rs
src-tauri/src/commands/: campaign.rs  mod.rs  persistence.rs  tactical.rs
src-tauri/src/ecs/: components.rs  entity.rs  world.rs
src-tauri/src/engine/: config.rs  game_loop.rs  mod.rs  simulation.rs
src-tauri/src/events/: game_events.rs
src-tauri/src/persistence/: save_load.rs
src-tauri/src/state/: campaign_state.rs  game_state.rs  mod.rs  snapshot.rs  wave_state.rs  weather.rs
src-tauri/src/systems/: arc_prediction.rs  cleanup.rs  collision.rs  damage.rs  detection.rs  detonation.rs  drag.rs  gravity.rs  input_system.rs  mirv_split.rs  mod.rs  movement.rs  shockwave_system.rs  state_snapshot.rs  thrust.rs  wave_spawner.rs  wind.rs
src-tauri/tests/: determinism_tests.rs  phase3_tests.rs  phase5_tests.rs  phase6_tests.rs  physics_tests.rs
src/ui/: App.tsx  (+2 more)
(+99 files in other folders)
