[workspace]
members = [
    "crates/deterrence-core",
    "crates/deterrence-sim",
    "crates/deterrence-threat-ai",
    "crates/deterrence-terrain",
    "crates/deterrence-procgen",
    "crates/deterrence-campaign",
    "crates/deterrence-app",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
hecs = "0.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
