[package]
name = "deterrence-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
deterrence-core = { path = "../deterrence-core" }
deterrence-threat-ai = { path = "../deterrence-threat-ai" }
hecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
